[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/PauseUIScript.gd" type="Script" id=2]
[ext_resource path="res://ui/fonts/title_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/theme.tres" type="Theme" id=7]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 2 )

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
color = Color( 0, 0, 0, 0.501961 )

[node name="Menu" type="Panel" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = -207.0
margin_right = 137.5
margin_bottom = 207.0
theme = ExtResource( 7 )

[node name="ResumeButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -61.0
margin_right = 72.5
margin_bottom = -27.0
grow_horizontal = 2
theme = ExtResource( 7 )
text = "Resume"

[node name="ExitGameButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = 131.0
margin_right = 69.5
margin_bottom = 165.0
grow_horizontal = 2
theme = ExtResource( 7 )
text = "Exit Game"

[node name="OptionsButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -13.0
margin_right = 70.5
margin_bottom = 21.0
grow_horizontal = 2
theme = ExtResource( 7 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = 35.0
margin_right = 69.5
margin_bottom = 69.0
grow_horizontal = 2
theme = ExtResource( 7 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleButton" type="Button" parent="Pause/Menu"]
anchor_left = 0.5
anchor_top = 0.497
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 84.9
margin_right = 64.0
margin_bottom = 110.0
grow_horizontal = 2
theme = ExtResource( 7 )
text = "Title Screen"

[node name="MenuTitle" type="Label" parent="Pause/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -168.0
margin_right = 96.0
margin_bottom = -104.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
text = "Paused"

[connection signal="pressed" from="Pause/Menu/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/Menu/ExitGameButton" to="Pause" method="_on_ExitGameButton_pressed"]
[connection signal="pressed" from="Pause/Menu/OptionsButton" to="Pause" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Pause/Menu/TutorialButton" to="Pause" method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Pause/Menu/TitleButton" to="Pause" method="_on_ReturnToTitleButton_pressed"]
